--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
+@import './mq';
 @import './utils';
 @import './reset';
 @import './main';
