--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,28 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.layout {
+  --navHeight: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+}
+
 header {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 75px;
+  height: var(--navHeight);
   width: 100%;
   background-color: cornsilk;
   padding: 0 1rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform-style: preserve-3d;
 }
 header .logo {
   display: flex;
@@ -44,6 +58,7 @@ header .logo img {
 header .logo-text {
   margin-top: 4px;
   font-size: 2em;
+  white-space: nowrap;
   font-family: "Satisfy", cursive;
 }
 header .search {
@@ -51,7 +66,6 @@ header .search {
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  width: 400px;
   height: 30px;
 }
 header .search input {
@@ -65,12 +79,25 @@ header .search input {
   border-radius: 5px;
   border-width: 1px;
   border-color: dimgray;
+  transform: translateY(0) translateZ(10px);
+}
+header .search .toggle-search {
+  display: none;
+  text-align: center;
+  width: 40px;
+  height: 40px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+header .search .toggle-search svg {
+  width: 100%;
+  height: 100%;
 }
 header .user-panel {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
 }
 header .user-panel .toggle-nav {
   background: none;
@@ -91,13 +118,14 @@ header .user-panel nav {
   align-items: center;
   flex-direction: column;
   position: absolute;
-  right: -1rem;
-  transform: translateY(-700px);
+  top: 0;
+  right: 0;
+  transform: translateY(-700px) translateZ(-10px);
   background: darkslateblue;
   color: whitesmoke;
   width: 300px;
   padding: 1rem;
-  transition: 0.5s;
+  transition: 0.6s;
 }
 header .user-panel nav a {
   color: whitesmoke;
@@ -109,7 +137,7 @@ header .user-panel nav a:hover {
   color: red;
 }
 header .user-panel nav.active {
-  transform: translateY(115px);
+  transform: translateY(var(--navHeight));
 }
 header .user-panel-img {
   width: 45px;
@@ -119,6 +147,32 @@ header .user-panel-img img {
   width: 100%;
   object-fit: cover;
 }
+@media only screen and (max-width: 700px) {
+  header {
+    justify-content: space-between;
+  }
+  header .search .toggle-search {
+    display: inline-block;
+  }
+  header .search input {
+    position: absolute;
+    top: 0;
+    height: 30px;
+    transform: translateY(0) translateZ(-10px);
+    transition: transform 0.5s;
+  }
+  header .search input.active {
+    transform: translateY(var(--navHeight)) translateZ(-10px);
+  }
+}
+@media only screen and (max-width: 500px) {
+  header {
+    justify-content: space-between;
+  }
+  header .user-panel nav {
+    width: 100%;
+  }
+}
 
 main {
   display: flex;
@@ -126,11 +180,64 @@ main {
   align-items: center;
   flex-direction: column;
   justify-content: start;
-  margin-top: 1rem;
+  margin-top: calc(var(--navHeight) + 1rem);
   margin-bottom: 1rem;
   width: 100%;
-  height: 1100px;
+  padding: 1.6rem;
   background-color: darkseagreen;
+}
+main .main-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: start;
+  background-color: antiquewhite;
+  height: 1100px;
+  width: 100%;
+}
+main .main-content h1 {
+  text-transform: uppercase;
+}
+main .main-content .list-box {
+  width: 85%;
+}
+main .main-content .list-box__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  list-style: none;
+}
+main .main-content .list-box__list-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+}
+main .main-content .list-box__list-item:not(:last-child) {
+  margin-bottom: 1rem;
+}
+main .main-content .list-box__list-item .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  margin-right: 2.5rem;
+}
+main .main-content .list-box__list-item .main-link {
+  min-width: 55%;
+  margin-right: auto;
+}
+main .main-content .list-box__list-item .end-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .main-content .list-box__list-item .end-links a:not(:last-child) {
+  margin-right: 7px;
 }
 
 footer {
